添加百度统计代码

--- a/projects/tt2/public/index.html
+++ b/projects/tt2/public/index.html
@@ -20,6 +20,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>TT2 tools</title>
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?2c5f620b9bc93453d20ec0256199d5b4";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
