原优化器增加通知引流至新优化器，新优化器增加海姆达尔附魔

--- a/optimizer/index.html
+++ b/optimizer/index.html
@@ -33,6 +33,7 @@
       </ul>
       <h1 class="h4">
         TT2 优化器 <span class="badge badge-secondary" style="background-color: #41754f;">3.8.0</span>
+        <a style="display: block; font-size: 1rem;" href="http://www.hyncao.com/new-optimizer/">** 当前工具已不更新, 点我前往新版 **</a>
       </h1>
     </div>
     <div class="tab-content" id="tabContent">
