welcome add link

--- a/projects/tt2/public/welcome.html
+++ b/projects/tt2/public/welcome.html
@@ -35,9 +35,11 @@
         align-items: center;
         justify-content: center;
         font-size: 0.5rem;
-        color: #666;
-
         animation: myFrame 1s ease 1 forwards;
+      }
+
+      .container a {
+        color: #666;
       }
       @keyframes myFrame {
         0% {
@@ -50,6 +52,8 @@
     </style>
   </head>
   <body>
-    <div class="container">Welcome</div>
+    <div class="container">
+      <a href="/">Welcome</a>
+    </div>
   </body>
 </html>
