修改icon, 修改theme color

--- a/projects/tt2/public/index.html
+++ b/projects/tt2/public/index.html
@@ -26,6 +26,11 @@
     <!-- iPhone 5/iPod Touch 5 竖屏 640x1136 (Retina) -->
     <!-- iOS 启动画面 end -->
 
+    <!-- 设置 icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/icon-192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon-192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icon-192.png">
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
