修改index.html的theme-color为黑色

--- a/projects/tt2/public/index.html
+++ b/projects/tt2/public/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=0.5, maximum-scale=0.5, minimum-scale=0.5, user-scalable=no"
     />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#000000" />
 
     <!-- iOS 设备 begin -->
     <meta name="apple-mobile-web-app-title" content="标题" />
